update role user mapping
