# docs/openapi/build/system_manager_reference.yaml
@@ -610,6 +610,9 @@ components:
       title: role mapping user is a definition of User resource.
       type: object
       properties:
+        id:
+          type: string
+          format: uuid
         name:
           type: string
           example: firstname lastname
@@ -619,6 +622,11 @@ components:
           type: string
         preferred_username:
           type: string
+        enabled:
+          type: boolean
+        create_timestamp:
+          type: string
+          format: date-time
   securitySchemes:
     BasicAuth:
       type: http
